DigicielFull/force-app/main/default/objects/Lead/fields/Street_1_mapping_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Street_1_mapping_Opportunity__c</fullName>
    <formula>Street_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street 1 mapping Opportunity</label>
    <type>Text</type>
</CustomField>