DigicielFull/force-app/main/default/objects/Lead/fields/Street_2_mapping_Contact__c.field-meta.xml
<CustomField>
    <fullName>Street_2_mapping_Contact__c</fullName>
    <formula>Street_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street 2 mapping Contact</label>
    <type>Text</type>
</CustomField>