DigicielFull/force-app/main/default/objects/Lead/fields/TIMBASURVEYS__SurveyReminder__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
    <defaultValue>&apos;&apos;</defaultValue>
    <label>SurveyReminder</label>
    <type>TextArea</type>
</CustomField>