DigicielFull/force-app/main/default/objects/Lead/fields/Timeline_for_Decision__c.field-meta.xml
<CustomField>
    <fullName>Timeline_for_Decision__c</fullName>
    <inlineHelpText>How soon will the solution be acquired?</inlineHelpText>
    <label>Timeline for Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - 30 Days</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>Over 1 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>