DigicielFull/force-app/main/default/objects/Lead/fields/Total_Amount_collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_collected__c</fullName>
    <label>Total Amount collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>