DigicielFull/force-app/main/default/objects/Lead/fields/Total_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Due__c</fullName>
    <formula>Installation_Connection_Fee__c +  Monthly_Fee__c +  Converter_Purchase_Rental__c + Converter_Deposit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>