DigicielFull/force-app/main/default/objects/Lead/fields/What_is_the_monthly_rate__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_monthly_rate__c</fullName>
    <label>What is the monthly rate?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>