DigicielFull/force-app/main/default/objects/Lead/fields/What_is_your_current_add_on_package__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_current_add_on_package__c</fullName>
    <label>What is your current add-on package?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Movie Package</fullName>
            </value>
            <value>
                <fullName>Sports Pack</fullName>
            </value>
            <value>
                <fullName>Sports Max Pack</fullName>
            </value>
            <value>
                <fullName>Adult Service</fullName>
            </value>
            <value>
                <fullName>HD Package</fullName>
            </value>
            <value>
                <fullName>Movie</fullName>
            </value>
            <value>
                <fullName>Sport</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Tier Service</fullName>
            </value>
            <value>
                <fullName>Premium Movie Channels</fullName>
            </value>
            <value>
                <fullName>Sports Max 1</fullName>
            </value>
            <value>
                <fullName>Sports Max 2</fullName>
            </value>
            <value>
                <fullName>Sports Max 1 &amp; 2</fullName>
            </value>
            <value>
                <fullName>Bulk Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>