DigicielFull/force-app/main/default/objects/Lead/fields/What_Services_are_you_interested_in__c.field-meta.xml
<CustomField>
    <fullName>What_Services_are_you_interested_in__c</fullName>
    <label>What Services are you interested in?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>Fixed Line</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Fiber</fullName>
            </value>
            <value>
                <fullName>Fibre - TV</fullName>
            </value>
            <value>
                <fullName>Fibre - Broadband</fullName>
            </value>
            <value>
                <fullName>Fibre - Telephone</fullName>
            </value>
            <value>
                <fullName>Not interested in services</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Broadband</fullName>
            </value>
            <value>
                <fullName>Home phone</fullName>
            </value>
            <value>
                <fullName>All of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>