DigicielFull/force-app/main/default/objects/Lead/recordTypes/B2B_Sales_Lead.recordType-meta.xml
<RecordType>
    <fullName>B2B_Sales_Lead</fullName>
    <active>true</active>
    <businessProcess>Business Leads</businessProcess>
    <description>This record type allows Digicel employees to record Leads in the system. These leads are manually created, they do not originate from teh Website</description>
    <label>B2B Sales Lead</label>
</RecordType>