DigicielFull/force-app/main/default/objects/Lead/recordTypes/Dead_Lead.recordType-meta.xml
<RecordType>
    <fullName>Dead_Lead</fullName>
    <active>true</active>
    <businessProcess>Business Leads</businessProcess>
    <description>Used to close dead leads without mandatory fields</description>
    <label>Dead Lead</label>
</RecordType>