DigicielFull/force-app/main/default/objects/Lead/validationRules/Address_Required_after_contacted.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Required_after_contacted</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Status,&quot;Contacted&quot;)  &amp;&amp; (ISBLANK(  Street ) || ISBLANK( City ) || ISPICKVAL( Country__c, &quot;&quot;) || ISBLANK( State ))</errorConditionFormula>
    <errorMessage>If the Lead Status is no longer &quot;Open&quot;, the Address fields (Street, City, Parish / State and Country) must be completed.</errorMessage>
</ValidationRule>