DigicielFull/force-app/main/default/objects/Lead/validationRules/Sales_requirements_must_be_completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_requirements_must_be_completed</fullName>
    <active>false</active>
    <description>makes the business &amp; solution requirements mandatory before converting</description>
    <errorConditionFormula>AND(ISPICKVAL( Status , &quot;Contacted&quot;)|| ISPICKVAL( Status, &quot;Qualified&quot;),

isblank(Current_Solution_in_Place__c)||
isblank( Business_Pain_Points_Impact__c)|| isblank( Expected_Impact_of_Solutions__c)|| isblank( Solution_Requirements__c))&amp;&amp; (  Not (CONTAINS(RecordType.Name, &quot;Mobile Advertisement&quot;))) &amp;&amp; (  Not (CONTAINS(RecordType.Name, &quot;Consumer&quot;))) &amp;&amp; (  Not (CONTAINS(RecordType.Name, &quot;Trend&quot;)))</errorConditionFormula>
    <errorMessage>Please fill out the Business &amp; Solutions Section in its entirety.</errorMessage>
</ValidationRule>