DigicielFull/force-app/main/default/objects/Lead/listViews/All_Barbados_Leads.listView-meta.xml
<ListView>
    <fullName>All_Barbados_Leads</fullName>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Lead_Ranking__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Active_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Business_Solutions_W2L</value>
    </filters>
    <label>*All Barbados Leads</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Barbados</roleAndSubordinates>
    </sharedTo>
</ListView>