DigicielFull/force-app/main/default/objects/Lead/listViews/All_Website_Leads.listView-meta.xml
<ListView>
    <fullName>All_Website_Leads</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Country__c</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>Lead_Ranking__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Business_Solutions_W2L</value>
    </filters>
    <label>All Website Leads</label>
    <language>en_US</language>
</ListView>