DigicielFull/force-app/main/default/objects/Lead/listViews/Aruba_Web_Leads.listView-meta.xml
<ListView>
    <fullName>Aruba_Web_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Aruba Web Leads</label>
    <language>en_US</language>
    <queue>Aruba_Web_Leads</queue>
    <sharedTo>
        <group>Aruba_Curacao_Bonaire_Users_Sharing</group>
    </sharedTo>
</ListView>