DigicielFull/force-app/main/default/objects/Lead/listViews/Barbados_ICT_Leads_Dean_McIntosh.listView-meta.xml
<ListView>
    <fullName>Barbados_ICT_Leads_Dean_McIntosh</fullName>
    <columns>Lead_Ranking__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Parish_Region_Department__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Lead_Segment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>012d0000000tA6h</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Dean</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>McIntosh</value>
    </filters>
    <label>Barbados ICT Leads Dean McIntosh</label>
    <sharedTo>
        <group>Barbados_ICT_Admin_Team</group>
        <group>ICT_Barbados_Account_Managers_All</group>
        <group>ICT_Barbados_Sales_Managers</group>
        <group>ICT_Barbados_Technical</group>
        <group>Timba_Surveys_Barbados</group>
    </sharedTo>
</ListView>