DigicielFull/force-app/main/default/objects/Lead/listViews/Barbados_Web_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>Barbados_Web_Leads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Barbados Web Leads</label>
    <queue>Barbados_Web_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>