DigicielFull/force-app/main/default/objects/Lead/listViews/Cayman_Web_Leads.listView-meta.xml
<ListView>
    <fullName>Cayman_Web_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Cayman Web Leads</label>
    <language>en_US</language>
    <queue>Cayman_Web_Leads</queue>
    <sharedTo>
        <roleAndSubordinates>Cayman_Islands</roleAndSubordinates>
    </sharedTo>
</ListView>