DigicielFull/force-app/main/default/objects/Lead/listViews/FWI_Web_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>FWI_Web_Leads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>FWI Web Leads</label>
    <queue>FWI_Web_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>