DigicielFull/force-app/main/default/objects/Lead/listViews/Guyana_Web_Leads.listView-meta.xml
<ListView>
    <fullName>Guyana_Web_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Guyana Web Leads</label>
    <language>en_US</language>
    <queue>Guyana_Lead_Queue</queue>
</ListView>