DigicielFull/force-app/main/default/objects/Lead/listViews/ICT_Barbados_Leads_Gregory_Puckerin.listView-meta.xml
<ListView>
    <fullName>ICT_Barbados_Leads_Gregory_Puckerin</fullName>
    <columns>Lead_Ranking__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Parish_Region_Department__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Gregory</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Puckerin</value>
    </filters>
    <label>Barbados ICT Leads Gregory Puckerin</label>
    <sharedTo>
        <roleAndSubordinates>Barbados</roleAndSubordinates>
        <roleAndSubordinates>Barbados_Business_Solutions_Presales_Engineer</roleAndSubordinates>
        <roleAndSubordinates>Barbados_Corporate_Sales_Executve</roleAndSubordinates>
        <roleAndSubordinates>Barbados_Corporate_Sales_Manager</roleAndSubordinates>
        <roleAndSubordinates>Barbados_Head_of_Pre_Sales_Service_Delivery</roleAndSubordinates>
        <roleAndSubordinates>Barbados_Retail_Sales_Manager</roleAndSubordinates>
        <roleAndSubordinates>Barbados_Revenue_Assurance</roleAndSubordinates>
        <roleAndSubordinates>Barbados_Sales_Operations</roleAndSubordinates>
    </sharedTo>
</ListView>