DigicielFull/force-app/main/default/objects/Lead/listViews/Jamaica_Web_Leads.listView-meta.xml
<ListView>
    <fullName>Jamaica_Web_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Parish_Region_Department__c</columns>
    <columns>Lead_Agent__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Jamaica Web Leads</label>
    <queue>Jamaica_Web_Leads</queue>
</ListView>