DigicielFull/force-app/main/default/objects/Lead/listViews/PNG_ICT_Leads.listView-meta.xml
<ListView>
    <fullName>PNG_ICT_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Digicel_PNG_ICT</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>PNG ICT Leads</label>
    <language>en_US</language>
    <sharedTo>
        <group>PNG_Users</group>
    </sharedTo>
</ListView>