DigicielFull/force-app/main/default/objects/Lead/listViews/PNG_Trends_Leads.listView-meta.xml
<ListView>
    <fullName>PNG_Trends_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>012d0000000lLzc</value>
    </filters>
    <label>PNG Trends Leads</label>
    <language>en_US</language>
</ListView>