DigicielFull/force-app/main/default/objects/Lead/listViews/SP_PNG_MapIt_Lead_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>SP_PNG_MapIt_Lead_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>PNG MapIt Lead Queue</label>
    <queue>PNG_MapIt_Lead_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>